$Date$

VEGAN DEVEL VERSIONS at http://r-forge.r-project.org/

Version 1.90-2 (opened July 23, 2011)

	* ordilabel: gained argument 'select'.
	
Version 1.90-1 (closed July 23, 2011)

	* cca/rda/capscale support functions: cca/rda/capscale were
	changed to return zero components instead of NULL for completely
	aliased constraints (CCA) or saturated models (CA), but several
	support functions still checked for is.null() only, although they
	also should check if rank == 0. Some functions failed, and these
	are fixed here: anova.cca, bstick.cca, goodness.cca/rda,
	predict.cca/rda, screeplot.cca. The following functions did not
	fail, but were fixed: anova.ccanull, calibrate.cca, ordirgl,
	ordiresids, ordiplot3d, deviance.cca/rda (simplified),
	ordixyplot.

	* swan: gained argument 'maxit' that can be used to restrict the
	number of beals() passes on zeros. The default is 'maxit = Inf'
	which is the old behaviour: beals() passes on zero entries
	continue until there are no zeros or the number of zeros does not
	change. Probably only 'maxit = 1' makes any sense (in addition to
	the default 'maxit = Inf'), but all values are allowed.

	* metaMDSrotate: results could be a bit off with NA in
	environmental vector and >2D solution. The starting scores must be
	orthogonal, but the initial orthogonalizing PCA was run without
	removing NA cases.

	* ordiellipse, ordihull, ordispider: will remove NA scores that
	can appear with na.action in cca/rda/capscale (and perhaps in
	other cases).

	* betadiver: argument 'index' was renamed to 'method' for
	compatibility with dist() objects. Argument 'index' is
	still recognized with a warning.

	* metaMDS: Documentation and interface adapted to monoMDS().
	Argument 'noshare' defaults to FALSE with monoMDS(), since tie
	breaking seem to handle tied maximum dissimilarities even better
	than stepacross(). For 'engine = "monoMDS"' 'noshare' defaults to
	TRUE. The 'noshare' argument now accepts logical arguments in